# sangria-federated

./: .git-blame-ignore-revs  .sbtrc  .scalafmt.conf  HOW TO RELEASE.md  README.md  build.sbt
.github/workflows/: ci.yml  compatibility.yaml
core/src/main/protobuf/: reports.proto
core/src/main/scala/sangria/federation/: Directives.scala  EntityResolver.scala  Federation.scala  Link__Import.scala  Link__Purpose.scala  NodeObject.scala  _Any.scala  _Entity.scala  _FieldSet.scala  (+1 more)
example/: README.md
example/common/src/main/resources/: playground.html
example/gateway/: package.json
example/gateway/src/: gateway.js  server.js
example/product/: Dockerfile  README.md  docker-compose.yaml
example/product/src/main/scala/: Main.scala
example/review/src/main/resources/: logback.xml  playground.html
example/router/: start.sh  supergraph-local.yaml
example/router-test/: Cargo.toml  README.md  router.yaml
example/router-test/src/plugins/: feature_toggle.rs  mod.rs
example/router-test/xtask/: Cargo.toml
example/state/src/main/resources/: logback.xml
example/test/src/test/scala/: ExampleSpec.scala
project/: Dependencies.scala  plugins.sbt
src/main/scala/federation/: Decoder.scala  Directives.scala  EntityResolver.scala  Federation.scala  NodeObject.scala  Query.scala  _Any.scala  _Entity.scala  _FieldSet.scala  _Service.scala
src/main/scala/sangria/federation/: Directives.scala  Federation.scala  Query.scala  _FieldSet.scala  _Service.scala
src/test/scala/federation/: FederationSpec.scala
src/test/scala/sangria/federation/: FederationSpec.scala
(+88 files in other folders)
