# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "router-test"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
]

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
apollo-compiler = "0.4.1"
apollo-encoder = "0.4.0"
apollo-parser = "0.4.1"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = "1.6.0"
async-trait = "0.1.52"
futures = "0.3.21"
http = "0.2.8"
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "*"

[dev-dependencies]
indoc = "1.0.8"
miette = "5.5.0"
pretty_assertions = "1.3.0"
